<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_menu_signup"
            android:title="@string/menu_signup" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/menu_location" />

        <item
            android:id="@+id/nav_deal"
            android:icon="@drawable/ic_menu_deal"
            android:title="@string/menu_deal" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>