<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.formaloo.loyalty.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_offerFragment"
            app:destination="@id/offer_detail_fragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/offer_detail_fragment"
        android:name="com.formaloo.loyalty.ui.offerDetail.OfferFragment"
        android:label="@string/offer_details_title"
        tools:layout="@layout/fragment_offer">
        <argument
            android:name="offer"
            android:defaultValue="@null"
            app:argType="com.formaloo.loyalty.data.model.Offer"
            app:nullable="true" />
    </fragment>
    
    <fragment
        android:id="@+id/nav_signup"
        android:name="com.formaloo.loyalty.ui.signUp.SignUpFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signUpFragment_to_profileFragment"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home" />

    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.formaloo.loyalty.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="customer"
            android:defaultValue="@null"
            app:argType="com.formaloo.loyalty.data.model.customer.Customer"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_deal"
        android:name="com.formaloo.loyalty.ui.deal.DealFragment"
        android:label="@string/menu_deal"
        tools:layout="@layout/fragment_deal">
        <action
            android:id="@+id/action_dealFragment_to_signUpFragment"
            app:destination="@id/nav_signup"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.formaloo.loyalty.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.formaloo.loyalty.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />
</navigation>