<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_full_name"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/full_name_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_full_name"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardview_shadow_start_color" />

        <TextView
            android:id="@+id/score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/score"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/score_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/score"
            android:textColor="?colorOnPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardview_shadow_start_color" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_email"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/email_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_email"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardview_shadow_start_color" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_phone"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/phone_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_phone"
            android:textColor="?colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardview_shadow_start_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="Logout"
            android:textColor="@color/red"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
